--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-icons-pack": "^3.1.3",
 		"svelte-routing": "^2.12.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
