--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.2.10"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/speed-insights": "^1.0.10"
+	}
 }
