--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/speed-insights": "^1.0.10",
+		"node-fetch": "^3.3.2",
 		"node-ical": "^0.18.0",
 		"rrule": "^2.8.1"
 	}
