--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.10",
 		"node-fetch": "^3.3.2",
 		"node-ical": "^0.18.0",
