--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.15",
 		"svelte-check": "^3.8.0",
-		"svelte-icons-pack": "^3.1.3",
 		"svelte-routing": "^2.13.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
@@ -37,10 +36,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.10",
 		"node-fetch": "^3.3.2",
 		"node-ical": "^0.18.0",
-		"rrule": "^2.8.1"
+		"rrule": "^2.8.1",
+		"svelte-fa": "^4.0.2"
 	}
 }
